Logo image stop overflow

--- a/style.css
+++ b/style.css
@@ -6,19 +6,52 @@ body {
     height: 100vh;
     margin: 0%;
     display: grid;
-    grid-template-columns: 1fr 4fr;
-    grid-template-rows: 1fr 4fr;
+    grid-template-columns: 1fr 3fr 1fr;
+    grid-template-rows: minmax(25px, .7fr) minmax(33px, 1fr) minmax(100px, 3fr) minmax(100px, 3fr);
 }
 
-#sidebar {
-    grid-row: 1 / 3;
-    background-color: #0ea5e9;
+ul {
+    list-style-type: none;
 }
 
 header {
-    grid-area: 1 / 2 / 2 / 3;
+    grid-column: 1 / 4;
+    display: grid;
+    grid-template-columns: 1fr 4fr;
+}
+
+#logo {
+    background-color: #0ea5e9;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    overflow: auto;
+}
+
+#dashboard-logo {
+    height: 100%;
+}
+
+#nav-bar {
+    grid-column: 2 / 4;
+}
+
+#sidebar {
+    grid-area: 2 / 1 / 5 / 2;
+    background-color: #0ea5e9;
+}
+
+#account {
+    grid-area: 2 / 2 / 3 / 4;
 }
 
 main {
-    grid-area: 2 / 2 / 3 / 3;
+    grid-area: 3 / 2 / 5 / 3;
+}
+
+#announcements {
+    grid-area: 3 / 3 / 4 / 4;
+}
+
+#trending {
+    grid-area: 4 / 3 / 5 / 4;
 }
